# RegEx2DFA

./: .gitignore  CMakeLists.txt  Makefile  README.md  comma_adder.cpp  dfa.cpp  dfa.dot  dfa.h  dockerfile  episolan nfa to dfa.cpp  graphviz_utils.cpp  graphviz_utils.h  install_dependencies.bat  install_dependencies.sh  main  main.cpp  nfa.cpp  nfa.dot  nfa.h  postfix.cpp  readme.txt  utils.cpp
Final Report/: DFAReport.docx
Project_Presentation/: PROJECTpresent.pptx  RegEx2Dfa.pptx  Reportpdf.pptx
Trying_to_build/: automate_dfa  automate_dfa.cpp  dfa.dot  dfa_true_output.dot  e_nfa_to_dfa_dot_generator.cpp  epsilon_nfa_to_dfa  epsilon_nfa_to_dfa.cpp
Web Wrapping/: app.py
graphviz/: INSTALL_RECEIPT.json  sbom.spdx.json
graphviz/.brew/: graphviz.rb
graphviz/lib/: libcdt.5.dylib  libcgraph.6.dylib  libgvc.6.dylib  libgvpr.2.dylib  libpathplan.4.dylib  libxdot.4.dylib
graphviz/lib/graphviz/: libgvplugin_core.6.dylib  libgvplugin_dot_layout.6.dylib  libgvplugin_gd.6.dylib  libgvplugin_kitty.6.dylib  libgvplugin_kitty.dylib  libgvplugin_neato_layout.6.dylib  libgvplugin_pango.6.dylib  libgvplugin_pango.dylib  libgvplugin_quartz.6.dylib  libgvplugin_rsvg.6.dylib  (+5 more)
include/: automata.h  dfa.h  graphviz_utils.h  nfa.h  print_utils.h  regEx.h  state.h  utils.h  windowManagement.h
src/: automata.cpp  dfa.cpp  graphviz_utils.cpp  main.cpp  nfa.cpp  print_utils.cpp  regEx.cpp  state.cpp  utils.cpp  windowManagement.cpp
v-1/: Makefile  README.md  Readme to run e-nfa to dfa.md  combined.cpp  comma_adder  epsilon_nfa_to_dfa  main  main.cpp  nfa.cpp  nfa.dot  postfix
(+6 files in other folders)
